package com.nanyin.pattern.observer;

public interface Observer {
    void update(WeatherState weatherState);
}
