package com.nanyin.pattern.observer;

public enum WeatherState {
    SUNNY_DAY,
    CLOUDY_DAY,
    RAINY_DAY,
}
